@@ -365,3 +365,9 @@ int LayoutTestController::pageNumberForElementById(JSStringRef, float, float)
     // FIXME: implement
     return -1;
 }
+
+int LayoutTestController::numberOfPages(float, float)
+{
+    // FIXME: implement
+    return -1;
+}
